# voice-ai-agent-hospital

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  test_deepgram.py  test_system.py
backend/: pyproject.toml
backend/llm_service/: Dockerfile  main.py  model_router.py  token_stream.py  vllm_engine.py
backend/memory/: Dockerfile  embedder.py  main.py  retrieval.py  session_store.py
backend/orchestrator/: Dockerfile  agent_loop.py  appointments.py  intent_classifier.py  main.py  prompt_builder.py  pyproject.toml  tool_dispatcher.py
backend/outbound/: Dockerfile  campaign_scheduler.py  sip_client.py  tasks.py
backend/scheduler/: Dockerfile  booking_engine.py  main.py  slot_generator.py
backend/stt_service/: Dockerfile  deepgram_stream.py  deepgram_stream_old.py  deepgram_stream_simple.py  lang_signal.py  main.py
backend/tts_service/: Dockerfile  azure_tts.py  elevenlabs.py  main.py  voice_selector.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AppointmentCard.tsx  AppointmentModal.tsx  ConnectionStatus.tsx  EmergencySection.tsx  LanguageSwitcher.tsx  ProfileSection.tsx  ScheduleHistory.tsx  Toast.tsx  VoiceRecorder.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
infra/k8s/: orchestrator-hpa.yaml
infra/kafka/: topics.yaml
infra/postgres/: init.sql
observability/: otel_config.py
observability/dashboards/: latency_dashboard.json
realtime-gateway/: Dockerfile  package-lock.json  package.json
realtime-gateway/proto/: voice.proto
realtime-gateway/src/: server.ts
realtime-gateway/src/grpc/: client.ts
realtime-gateway/src/lang-detect/: fingerprint.ts
tests/: conftest.py  test_booking_engine.py  test_intent_classifier.py  test_lang_signal.py
(+3 files in other folders)
